--- a/css/box_model.css
+++ b/css/box_model.css
@@ -1,22 +1,22 @@
 
 
 .box{
-    border: 1px solid black;
+    border:1px solid black;
+    font-weight: bold;
     width: 150px;
     height: 50px;
     padding: 10px;
-    font-weight: bold;
     color: #FFF;
-    margin-bottom: 10px;
+    margin-left: 10px;
 }
 
 
-#box-red{
+.box-red{
     background-color:red;
 
 }
 
-#box-orange{
+.box-orange{
     background-color:orange;
     margin-left: 30px;
 
